--- a/AYumeRNA-frontend/index.html
+++ b/AYumeRNA-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/logo.ico">
     <link rel="stylesheet" href="/src/assets/data/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iSEE-tRNA</title>
